--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,91 +1,148 @@
-.footer-container{
-    
-    background-color: #141414;
- width: 100%;
 
+:root{
+    --main-font:  "LatoBold", sans-serif;
+
+    --main-color: #06D206;
+    --sub-color: #2c2c2c;
+    --primary-color: #fff;
 }
-.footer-container .footer-top{
-    padding: 4rem 5vw;
 
-    width: 100%;
+
+footer .container .footerTop .inner{
+    z-index: 999;
+    max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
-    max-width: 1440px;
+    padding: 0 5vw;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    align-items: center;
+    gap: 20px;
+   
+    padding: 7rem 5vw;
 }
-.footer-container .footer-top .row-1{
-    margin-left: 20px;
+footer .footerTop {
+    background-color:var(--sub-color);
 }
-.footer-container .footer-top .row-1 .logo {
+footer .container .footerTop .left{
     display: flex;
+    gap: 10px;
+    flex-direction: column;
 }
-.footer-container .footer-top .row-1 .logo h3{
-    color: white;
-    margin: 15px  5px;
-}
-.footer-container .footer-top .row-1 .inputBox input{
-    height: 45px;
-    width: 330px;
-    background-color: #141414;
-    border: 1px solid #eee;
-    color: #fff;
-    border-radius: 10px;
-    margin-top: 15px;
-    padding-left: 40px;
-    position: relative;
-}
-.footer-container .footer-top .row-1 .inputBox input::placeholder{
-    color: white;
 
-}
-.footer-container .footer-top .row-1 .inputBox span.icon-1 {
-    color: white;
-    position: absolute;
-    top: 39.5%;
-    left: 100px;
-    z-index: 99;
-}
-.footer-container .footer-top .row-1 .inputBox span.icon-2{
-    color: white;
-    position: absolute;
-    top: 39.5%;
-    right: 71%;
-    z-index: 99;
-}
-.footer-container .footer-bottom{
-    background-color: #1a1a1a;
-    width: 100%;
-    padding: 1rem 2rem;
+footer .container .footerTop .logo{
+    text-decoration: none;
     display: flex;
+    align-items: center;
+    gap: 5px;
 }
-.footer-container .footer-bottom h3 {
-    color: white;
-    font-weight: 100;
+
+footer .container .footerTop .logo span{
     font-size: 18px;
+    font-weight: 600;
+color: white;
 }
-.footer-container .footer-bottom a.footer-terms {
+
+footer .container .footerTop .logo span > span{
+    color: var(--sub-color);
+}
+
+footer .container .footerTop .right{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+footer .container .footerTop .right p{
     color: white;
-    text-decoration: none;
-    margin-left: 40px;
+    margin-top: 15px;
 }
-.footer-container .footer-bottom .bottom-links{
-    margin-left: 43%;
+footer .container .footerTop .right .sendEmail{
+    display: flex;
+    flex-direction: row;
 }
-.footer-container .footer-bottom   a.bottom-socials{
-    color: white;
-    text-decoration: none;
-    margin-left: 20px;
-    background-color: #141414;
+
+footer .container .footerTop .right .sendEmail input{
     padding: 10px;
-    border-radius: 58px;
-    text-align: center;
+    width: 45%;
+    font-size: 15px;
+    outline: 0;
+    border-radius: 10px;
+   
 }
-@media screen and (max-width: 700px){
-    .footer-container .footer-bottom{
+footer .container .footerTop .left{
+    display: flex;
+flex-direction: row;
+}
+footer .container .footerTop .left .socials {
+    display: flex;
+    flex-direction: column;
+    margin: 0 40px;
+}
+footer .container .footerTop .left .socials a{
+    color: white;
+    text-decoration: none;
+    margin: 10px;
+}
+footer .container .footerTop .right .sendEmail button{
+    padding: 10px 20px;
+    background: #703BF7;
+    font-size: 15px;
+    border: 0;
+    color: var(--primary-color);
+    margin-left: 7px;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+footer .container .footerTop .right p{
+    font-size: 12px;
+}
+
+
+footer .container .footerBottom{
+    background: #1A1A1A;
+}
+
+footer .container .footerBottom > .container{
+    max-width: 1440px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    padding: 20px 5vw;
+    justify-content: space-between;
+}
+
+footer .container .footerBottom > .container .copyright{
+    color: var(--sub-color);
+}
+
+footer .container .footerBottom > .container .social{
+    display: flex;
+    gap: 30px;
+}
+
+footer .container .footerBottom > .container .social a{
+    color: #fff;
+}
+@media screen and (max-width: 700px) {
+    footer .container .footerBottom > .container{
         flex-direction: column-reverse;
+        gap: 30px;
+        text-align: center;
+        padding: .5em 1vw;
+
+    }
+
+    footer .container .footerBottom > .container .social{
+        display: flex;
         align-items: center;
         justify-content: center;
+        flex-direction: row;
     }
-    .footer-container .footer-bottom .bottom-links{
-margin: 10px 2%;
+    footer .container .footerTop .left .socials{
+        margin: 20px 20px 0;
+    }
+    footer .container .footerTop .right .sendEmail input{
+        width: 75%;
     }
 }
